tests/fixtures/valid_programs/arithmetic.rzn
// tests/fixtures/valid_programs/arithmetic.rzn
// Arithmetic operations test

fun add(a: int, b: int) -> int {
    return a + b
}

fun multiply(a: int, b: int) -> int {
    return a * b
}

fun main() -> int {
    var x: int = add(5, 3)
    var y: int = multiply(x, 2)
    return y // Should return 16
}
