tests/fixtures/invalid_programs/undefined_function.rzn
// tests/fixtures/invalid_programs/undefined_function.rzn
// Undefined function error

fun main() -> int {
    return undefined_func() // Calling undefined function
}
